--- a/LPC1769-OLED-1_5.cbp
+++ b/LPC1769-OLED-1_5.cbp
@@ -7,21 +7,45 @@
 		<Option compiler="arm-elf-gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/LPC1769-OLED-1_5" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/LPC1769-OLED-1_5.axf" prefix_auto="1" extension_auto="0" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="arm-elf-gcc" />
 				<Compiler>
-					<Add option="-g" />
+					<Add option="-Os" />
+					<Add option="-g -mthumb -mcpu=cortex-m3 -D__STARTUP_CLEAR_BSS -D__START=main -flto -ffunction-sections -fdata-sections" />
+					<Add directory="drivers/oled_1_5/" />
+					<Add directory="drivers/BR_SysTick/" />
+					<Add directory="lpc17xx/system/" />
+					<Add directory="lpc17xx/core/" />
+					<Add directory="lpc17xx/Peripherals/include/" />
+					<Add directory="include/" />
 				</Compiler>
+				<Linker>
+					<Add option="-T gcc.ld -Wl,--gc-sections --specs=nano.specs -lc -lc -lnosys -Wl,-Map=LPC1769-OLED-1_5.map" />
+					<Add directory="LPC17XX/Linker" />
+				</Linker>
+				<ExtraCommands>
+					<Add after="arm-none-eabi-size.exe $(PROJECT_DIR)$(TARGET_OUTPUT_FILE)" />
+					<Add after="arm-none-eabi-objcopy.exe -O binary $(PROJECT_DIR)$(TARGET_OUTPUT_FILE) $(PROJECT_DIR)$(TARGET_OUTPUT_BASENAME).bin" />
+					<Add after="../LPC-Checksum-Inserter/LPC-Checksum-Inserter.exe $(PROJECT_DIR)$(TARGET_OUTPUT_BASENAME).bin" />
+					<Mode after="always" />
+				</ExtraCommands>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/LPC1769-OLED-1_5" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/LPC1769-OLED-1_5.axf" prefix_auto="1" extension_auto="0" />
+				<Option working_dir="bin/Release" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="arm-elf-gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add directory="drivers/oled_1_5/" />
+					<Add directory="drivers/BR_SysTick/" />
+					<Add directory="lpc17xx/system/" />
+					<Add directory="lpc17xx/core/" />
+					<Add directory="lpc17xx/Peripherals/include/" />
+					<Add directory="include/" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -31,6 +55,137 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="Drivers/BR_SysTick/BR_SysTick.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Drivers/BR_SysTick/BR_SysTick.h" />
+		<Unit filename="Drivers/OLED_1_5/Font_5x7.h" />
+		<Unit filename="Drivers/OLED_1_5/oled_driver.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Drivers/OLED_1_5/oled_driver.h" />
+		<Unit filename="Drivers/OLED_1_5/oled_hwif.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Drivers/OLED_1_5/oled_hwif.h" />
+		<Unit filename="LPC17XX/Core/core_cm3.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="LPC17XX/Core/core_cm3.h" />
+		<Unit filename="LPC17XX/Peripherals/include/debug_frmwrk.h" />
+		<Unit filename="LPC17XX/Peripherals/include/lpc17xx_adc.h" />
+		<Unit filename="LPC17XX/Peripherals/include/lpc17xx_can.h" />
+		<Unit filename="LPC17XX/Peripherals/include/lpc17xx_clkpwr.h" />
+		<Unit filename="LPC17XX/Peripherals/include/lpc17xx_dac.h" />
+		<Unit filename="LPC17XX/Peripherals/include/lpc17xx_emac.h" />
+		<Unit filename="LPC17XX/Peripherals/include/lpc17xx_exti.h" />
+		<Unit filename="LPC17XX/Peripherals/include/lpc17xx_gpdma.h" />
+		<Unit filename="LPC17XX/Peripherals/include/lpc17xx_gpio.h" />
+		<Unit filename="LPC17XX/Peripherals/include/lpc17xx_i2c.h" />
+		<Unit filename="LPC17XX/Peripherals/include/lpc17xx_i2s.h" />
+		<Unit filename="LPC17XX/Peripherals/include/lpc17xx_iap.h" />
+		<Unit filename="LPC17XX/Peripherals/include/lpc17xx_libcfg_default.h" />
+		<Unit filename="LPC17XX/Peripherals/include/lpc17xx_mcpwm.h" />
+		<Unit filename="LPC17XX/Peripherals/include/lpc17xx_nvic.h" />
+		<Unit filename="LPC17XX/Peripherals/include/lpc17xx_pinsel.h" />
+		<Unit filename="LPC17XX/Peripherals/include/lpc17xx_pwm.h" />
+		<Unit filename="LPC17XX/Peripherals/include/lpc17xx_qei.h" />
+		<Unit filename="LPC17XX/Peripherals/include/lpc17xx_rit.h" />
+		<Unit filename="LPC17XX/Peripherals/include/lpc17xx_rtc.h" />
+		<Unit filename="LPC17XX/Peripherals/include/lpc17xx_spi.h" />
+		<Unit filename="LPC17XX/Peripherals/include/lpc17xx_ssp.h" />
+		<Unit filename="LPC17XX/Peripherals/include/lpc17xx_systick.h" />
+		<Unit filename="LPC17XX/Peripherals/include/lpc17xx_timer.h" />
+		<Unit filename="LPC17XX/Peripherals/include/lpc17xx_uart.h" />
+		<Unit filename="LPC17XX/Peripherals/include/lpc17xx_wdt.h" />
+		<Unit filename="LPC17XX/Peripherals/source/debug_frmwrk.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="LPC17XX/Peripherals/source/lpc17xx_adc.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="LPC17XX/Peripherals/source/lpc17xx_can.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="LPC17XX/Peripherals/source/lpc17xx_clkpwr.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="LPC17XX/Peripherals/source/lpc17xx_dac.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="LPC17XX/Peripherals/source/lpc17xx_emac.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="LPC17XX/Peripherals/source/lpc17xx_exti.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="LPC17XX/Peripherals/source/lpc17xx_gpdma.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="LPC17XX/Peripherals/source/lpc17xx_gpio.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="LPC17XX/Peripherals/source/lpc17xx_i2c.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="LPC17XX/Peripherals/source/lpc17xx_i2s.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="LPC17XX/Peripherals/source/lpc17xx_iap.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="LPC17XX/Peripherals/source/lpc17xx_libcfg_default.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="LPC17XX/Peripherals/source/lpc17xx_mcpwm.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="LPC17XX/Peripherals/source/lpc17xx_nvic.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="LPC17XX/Peripherals/source/lpc17xx_pinsel.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="LPC17XX/Peripherals/source/lpc17xx_pwm.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="LPC17XX/Peripherals/source/lpc17xx_qei.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="LPC17XX/Peripherals/source/lpc17xx_rit.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="LPC17XX/Peripherals/source/lpc17xx_rtc.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="LPC17XX/Peripherals/source/lpc17xx_spi.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="LPC17XX/Peripherals/source/lpc17xx_ssp.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="LPC17XX/Peripherals/source/lpc17xx_systick.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="LPC17XX/Peripherals/source/lpc17xx_timer.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="LPC17XX/Peripherals/source/lpc17xx_uart.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="LPC17XX/Peripherals/source/lpc17xx_wdt.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="LPC17XX/Startup/startup_lpc17xx.S" />
+		<Unit filename="LPC17XX/System/LPC17xx.h" />
+		<Unit filename="LPC17XX/System/system_lpc17xx.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="LPC17XX/System/system_lpc17xx.h" />
+		<Unit filename="include/lpc17xx_libcfg.h" />
+		<Unit filename="lpc1769-oled-1_5.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Extensions>
 			<code_completion />
 			<envvars />
